# verity

./: .gitignore  SETUP.md  dev
hub/: README.md  pyproject.toml
hub/db/migrations/: .gitkeep  0002_actor_preferences.sql  0003_compliance_metamodel.sql  0004_evidence_intake_scope.sql  0005_change_proposal_asset.sql  0006_tool_data_classification.sql  0007_model_reference_fallback.sql  0008_model_catalog.sql  0009_schema_additions.sql  0010_display_name_app_scope.sql
hub/db/queries/: application.sql  application_onboarding.sql  application_perimeter.sql  approval.sql  assessment.sql  auth.sql  change_proposal.sql  health.sql  intake.sql  intake_approval.sql  intake_requirement.sql  obligation.sql  preferences.sql  registry.sql  registry_bindings.sql  registry_components.sql  registry_model_catalog.sql  status_transition.sql
hub/db/schema/: verity_schema.sql
hub/db/schema/audit/: auth_event.sql  auth_event_outcome.sql  auth_event_type.sql  evidence.sql  harness_instance_health_current.sql  harness_running_package_current.sql  model_invocation_log.sql  v_model_invocation_cost.sql
hub/db/schema/core/: _relationships.sql  account_user.sql  actor_app_role_grant.sql  actor_preferences.sql  application_jurisdiction.sql  approval_signoff.sql  automation_actor.sql  change_proposal_asset.sql  compliance_exception.sql  current_actor_app_role.sql  current_actor_role.sql  data_connector_version.sql  deployment.sql  deployment_cluster.sql  deployment_event.sql  domain_maturity.sql  entity_champion_current.sql  entity_lifecycle_current.sql  evaluation_run.sql  (+44 more)
hub/db/seed/: core_seed.sql  reference_seed.sql
hub/docs/: css-architecture.md  dev-setup.md
hub/portal/: .env.example  CONTRIBUTING.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
hub/portal/src/: App.tsx  main.tsx  sprite.ts  vite-env.d.ts
hub/src/verity_hub/: app.py  config.py  db.py  migrate.py
hub/tests/: test_migrate.py
tools/: README.md  demo_seed.py  dev.py  pyproject.toml  seed2.py
(+612 files in other folders)
