[project]
name = "verity-hub"
version = "0.1.0"
description = "Verity governance hub — API, Harness Gateway, relay, schema/seed runner"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "psycopg[binary,pool]>=3.2",
  "aiosql>=10",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "itsdangerous>=2.2",
  "httpx>=0.27",        # Entra token exchange
  "pyjwt[crypto]>=2.9", # validate the Entra ID token (RS256 via JWKS)
  "pyyaml>=6.0",        # YAML bundle export/import (feature 005 US5)
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
  "testcontainers[postgres]>=4.5",
  "inquirerpy>=0.3",  # arrow-key menu for tools/dev.py
  "rich>=13",         # pretty tables/output for tools/dev.py
  "pytest-cov>=5",
]

[tool.coverage.run]
source = ["verity.hub"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verity"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore:Using .httpx. with .starlette.testclient"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
