[project]
name = "verity-dev-tools"
version = "0.1.0"
description = "Verity developer/demo console — local stack, db reset/seed, aggregated logs, canned ops"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "inquirerpy>=0.3",
  "rich>=13",
  "psycopg[binary]>=3.2",
]

[project.scripts]
dev = "verity.dev.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verity"]

[tool.ruff]
line-length = 100
target-version = "py312"
